<resources>
    <string name="app_name">maestrapp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="male">"Masculino"</string>
    <string name="female">"Femenino"</string>
    <string name="sumar">"Sumar"</string>
    <string name="restar">"Restar"</string>
    <string name="altura">"Altura"</string>
    <string name="titleResultado">"Tu resultado es"</string>

</resources>